fix horizontal scroll on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,4 +16,5 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
+  overflow-x: hidden;
 }
